--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mocha": "^6.2.1",
     "mongoose": "^5.7.1",
@@ -32,6 +33,7 @@
     "nodemailer": "^6.4.2",
     "nodemailer-mailgun-transport": "^2.0.0",
     "nodemon": "^1.18.10",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-image-gallery": "^1.0.3",
     "react-tooltip": "^3.11.1",
     "should": "^13.2.3",
