--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-server/config/config.js
+﻿server/config/config.js
 client/node_modules
 node_modules/
 .vscode
-workflow_setup.shnpm 
+workflow_setup.shnpm
+.mdproj
+.sln
